Code quality: fixed unsafe call to newInstance()